# cookingAssistant

./: .gitignore  .pre-commit-config.yaml  README.md  api_test.py  docker-compose.yml  id_rsa  id_rsa.pub  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.gitignore/: .gitignore  pyproject.toml
ai_cooking_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
client/src/: App.css  App.js  App.test.js
common/: config.py  utils.py
extractor_service/: Dockerfile  extractor_service_app 2.py  extractor_service_app.py
extractor_service/tests/: test_extractor_service.py
html_fetcher/: Dockerfile  html_fetcher_app 2.py  html_fetcher_app.py  requirements.txt
html_fetcher/tests/: test_html_fetcher.py
orchestration_service/: Dockerfile  config.py  orchestration_service_app 2.py  orchestration_service_app.py  requirements.txt
orchestration_service/tests/: test_orchestration_service.py
query_planner/: Dockerfile  query_planner_app 2.py  query_planner_app.py  query_planner_test.py  requirements.txt
query_planner/tests/: conftest.py  test_query_planner.py
ranker_service/: Dockerfile  ranker_service_app 2.py  ranker_service_app.py
ranker_service/tests/: test_ranker_service.py
search_service/: Dockerfile  requirements.txt  search_service_app.py
search_service/tests/: test_search_service.py
summarizer_service/: Dockerfile  requirements.txt  summarizer_service_app.py
summarizer_service/tests/: test_summarizer_service.py
tests/integration/: e2e.py
