[project]
name = "ai-cooking-assistant"
version = "0.1.0"
description = "AI cooking assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=0.27.0",
  "requests>=2.28.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.95.0",
  "uvicorn>=0.22.0",
  "pydantic>=1.10.0",
  "pre-commit>=3.4.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["search_service/tests", "query_planner/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
